--- a/_posts/2018-02-13-Start-2018.md
+++ b/_posts/2018-02-13-Start-2018.md
@@ -9,19 +9,5 @@ catalog: true
 tags:
     - 生活
 ---
-
-> “Yeah It's on. ”
-
-
-# 前言
-
-Blog开通了，又是一片新天地（对于我来说）。
-
-# 小感悟
-自从从一个和互联网一点都不挂钩的无本院校，保研到bupt之后，感受到了bupt炙热的互联网氛围。也看到了诸位大神是如何学习，如何生活，如何...
-幸好宿舍的舍友就是一位很6的前端攻城狮。他平时对我言传身教极少，讽刺挖苦我单身的客观事实的时候总是乐此不疲。
-但是还是在他的无言感召下，对python和相关的前端框架，有了很大兴趣，也做了一些的学习。
-还是感谢有这样一个舍友，感谢他让我明白了技术高超不是只用智商，还需要用时间和实践来堆积。
-废话不多说，以后多学多记。
-
-—— sgy 记于2018.2
+{% capture about_zh %}{% include posts/2018-02-13-Start-2018/zh.md %}{% endcapture %} {{ about_zh | markdownify }}
+{% capture about_en %}{% include posts/2018-02-13-Start-2018/en.md %}{% endcapture %} {{ about_en | markdownify }}
