--- a/_posts/2018-02-13-Start-2018.md
+++ b/_posts/2018-02-13-Start-2018.md
@@ -6,6 +6,7 @@ date:       2018-02-13 11:11:11
 author:     "shihunyewu"
 header-img: "img/post-bg-2015.jpg"
 catalog: true
+multilingual：true
 tags:
     - 生活
 ---
