第一天，首开博客

--- a/_posts/2018-02-13-Start-2018.md
+++ b/_posts/2018-02-13-Start-2018.md
@@ -18,8 +18,8 @@ tags:
 从 0 到 1 的突破。
 
 ## 小确幸
-宿舍的舍友就是一位很6的前端攻城狮。他平时对我言传身教极少，讽刺挖苦我单身的客观事实的时候倒是很多。
-虽然他经常显得很不正经，但是还是在他的无言感召下，我对python和相关的前端框架，有了很大兴趣，也做了一些的学习。
+宿舍的舍友就是一位很6的前端攻城狮。不好为人师，时常帮我分析感情问题（虽然我连感情都还没有建立起来）。
+尽管他经常显得很不正经，但是还是在他的无言感召下，我对python和相关的前端框架，有了很大兴趣，也做了一些的学习。
 还是感谢有这样一个舍友吧。
 废话不多说，以后多学多记。
 
