--- a/_posts/2018-03-15-dp-note.md
+++ b/_posts/2018-03-15-dp-note.md
@@ -12,7 +12,7 @@ tags:
 
 > "动态规划总结"
 
-刷LEETCODE的时候经常会碰到动态规划的题目，动态规划最重要一点是找到其内涵的递推关系，有的时候需要记录多个状态的值，有的时候只需要记录仅有的几个状态的值，这些都视递推关系而定。
+刷LEETCODE的时候经常会碰到动态规划的题目，动态规划最重要一点是找到其内含的递推关系，有的时候需要记录多个状态的值，有的时候只需要记录仅有的几个状态的值，这些都视递推关系而定。
 
 #### 热身
 菲波那切数列，这个经常被用于讲解递归的初始小案例，其实也是个经典的动态规划问题，简单的动态规划问题最终要的就是要找到递推关系。比如斐波那契数列的递推关系就很明显。
@@ -48,11 +48,6 @@ fib(n) = fib(n-1) + fib(n-2)
 选二者中的最大值，就是得到的最大报酬。
 这样问题就递推到了 opt(5) 和 opt(7)。
 最终会递推到第1个任务。
-
-现在递推关系找到了，如何将这样的关系从第1个任务往第n个任务推进呢？
-就是单纯地从第一个开始分析就可以了，一个一个分析，直到可以使用递推关系的地方就可以使用循环来进行迭代了。
-
-如果想要记录都是那些任务的话，那么用一个pre(i)数组来记录分析的第i个任务的前一个任务的编号。和迪杰斯特拉算法求最短路径的思想类似。
 
 #### 198. House Robber(LEETCODE)
 [题目地址](https://leetcode.com/problems/house-robber/description/)
