--- a/_posts/2018-03-15-dp-note.md
+++ b/_posts/2018-03-15-dp-note.md
@@ -47,7 +47,14 @@ fib(n) = fib(n-1) + fib(n-2)
 	opt(7)
 选二者中的最大值，就是得到的最大报酬。
 这样问题就递推到了 opt(5) 和 opt(7)。
+
 最终会递推到第1个任务。
+
+再做每道动态规划题的时候，要始终有不惜多开空间来保存各种信息的觉悟，题目理顺了之后，可以再根据题目的特点，分析到底是需要多少空间，再节省空间，当然这是我这个新手的体会。
+
+对于这道题目，可以开辟一个数组opt数组表示当考虑到第 i 个任务的时候，最优选择下的最大报酬。
+
+一般初始的几个状态是不能使用递推关系的，需要做特别的分析。之后一直推移到可以用递推关系时，再使用即可。
 
 #### 198. House Robber(LEETCODE)
 [题目地址](https://leetcode.com/problems/house-robber/description/)
@@ -82,6 +89,36 @@ class Solution(object):
             i += 1
         return max([pre,prepre])
 ```
-[1]: http://google.com/        "Google" 
+
+#### 70. Climbing Stairs
+[题目地址](https://leetcode.com/problems/climbing-stairs/description/)
+
+该题目的递推关系：
+```
+s[n] = s[n-1] + s[n-2]
+```
+代码：
+```python 
+class Solution(object):
+    def climbStairs(self, n):
+        """
+        :type n: int
+        :rtype: int
+        """
+        if n == 1:
+            return 1
+        if n == 2:
+            return 2
+        pre = 2
+        prepre = 1
+        ren = 0
+        for i in range(3,n+1):
+            ren = pre + prepre
+            prepre = pre
+            pre = ren
+        return ren
+```
 
 
+#### 参考
+1. [动态规划](https://www.bilibili.com/video/av18512769/)
