--- a/_posts/2018-03-15-dp-note.md
+++ b/_posts/2018-03-15-dp-note.md
@@ -4,7 +4,7 @@ title:      "dp-note"
 subtitle:   " \"dp\""
 date:       2018-03-15 11:11:11
 author:     "shihunyewu"
-header-img: "img/post-bg-2015.jpg"
+header-img: "img/post-bg-miui6.jpg"
 catalog: false
 tags:
     - LEETCODE
