--- a/_posts/2018-04-03-Python语法基础.md
+++ b/_posts/2018-04-03-Python语法基础.md
@@ -15,11 +15,11 @@ tags:
 
 ### 第二章
 
-* 乘方操作符
+乘方操作符
 	```python
 	2 ** 3 = 8
 	```
-* for循环遍历  
+for循环遍历  
 	发现有的人喜欢在遍历列表的时候，不仅遍历列表的元素，同时还得到相应的索引，这时就可以使用 enumerate函数
 	```python
 	for i,ch in enumerate(foo):
@@ -31,7 +31,7 @@ tags:
 	b(1)
 	c(2)
 	```
-* 错误和异常
+错误和异常
 
 ```
 try:
@@ -42,7 +42,7 @@ except IOError,e:
 	print 'file open error',e
 ```
 
-* 函数的默认参数
+函数的默认参数
 
 ```
 def foo(debug = True):
