--- a/_posts/2018-04-03-Python语法基础.md
+++ b/_posts/2018-04-03-Python语法基础.md
@@ -15,12 +15,14 @@ tags:
 
 ### 第二章
 
-乘方操作符
+##### 乘方操作符
 	```python
 	2 ** 3 = 8
 	```
-for循环遍历  
-	发现有的人喜欢在遍历列表的时候，不仅遍历列表的元素，同时还得到相应的索引，这时就可以使用 enumerate函数
+##### for循环遍历  
+
+发现有的人喜欢在遍历列表的时候，不仅遍历列表的元素，同时还得到相应的索引，这时就可以使用 enumerate函数
+
 	```python
 	for i,ch in enumerate(foo):
 		print ch,'(%d)'%i
@@ -31,7 +33,7 @@ for循环遍历
 	b(1)
 	c(2)
 	```
-错误和异常
+##### 错误和异常
 
 ```
 try:
@@ -42,7 +44,7 @@ except IOError,e:
 	print 'file open error',e
 ```
 
-函数的默认参数
+##### 函数的默认参数
 
 ```
 def foo(debug = True):
@@ -53,12 +55,92 @@ def foo(debug = True):
 
 ### 第三章
 
-同一行书写多个语句
+##### 同一行书写多个语句
 
 ```python
 import sys; x = 'foo' ;
 ```
 
+##### 增量赋值
+
+但是不支持 x++ 或 ++x 这种前置/后置 自增/自减 运算符
+
+```
+x += 1
+```
+
+##### 多重赋值
+
+```python
+x = y = z = 1 # 结果就是 x = 1，y = 1，z = 1
+```
+
+##### 多元赋值
+
+```python
+x,y,z = 1,2,'string'
+x,y = y,x # 方便地交换变量值
+```
+
+##### 缩进
+
+缩进的上下边界为 3 个空格 和 7 个空格
+
+##### 模块结构和布局
+
+每个 python 脚本文档应该有清晰的结构，推荐结构如下：
+1. 起始行，通常只在类 Unix 环境下使用，有起始行就能够仅输入脚本名字来执行脚本，无需直接调用解释器。
+2. 模块文档，介绍模块的功能和重要全局变量的含义，模块外可以通过 module.__doc__ 来访问，使用 help() 查阅模块功能的时候，也是显示的这些内容。
+	```python
+	"this is a test module"
+	```
+3. 模块导入语句
+4. 变量定义
+5. 类定义语句，类功能描述和模块功能描述相似，通过 class.__doc__ 访问
+6. 函数定义语句，函数功能描述和模块功能描述相似，通过 function.__doc__ 访问
+7. 主程序
+
+##### __name__ == '__main__'
+
+一般在每个模块文件的主程序位置都要加这样一个判断，表示只有该文件作为主程序运行时才会执行以下代码，否则作为模块导入文件的时候是不会执行的。
+
+我们完成了每个模块之后可以在这个位置书写模块的测试代码。
+
+##### 垃圾收集
+
+python 和 java 类似，也是全权负责内存的管理，其中垃圾内存管理，使用变量的引用计数来作为指标，引用次数不大于 0，那么就将变量所占内存回收。
+* 增加引用计数
+```
+x = 3.14
+y = x # x 的引用次数加 1
+```
+* 减少引用次数
+	* 本地引用离开了作用范围
+	* 对象的一个别名被赋值给其他对象
+	* 对象被从一个窗口中移除  
+		```python
+		myList.remove(x)
+		```
+	* 窗口对象被删除
+		```python
+		del myList # myList中的子元素跟着被删除
+		```
+	* 对象被显式地删除  
+		```python
+		del x
+		```
+* 循环引用：使用循环垃圾收集器
+
+```python
+x = 123
+y = x
+x = y # x 和 y 发生了循环引用，x 和 y 的引用次数无论如何最少为 1
+```
+
+##### 为什么 Pyhthon 中不需要声明函数类型？
+
+？？？
 
 
+### 第四章 Python 对象
 
