--- a/_posts/2018-04-03-Python语法基础.md
+++ b/_posts/2018-04-03-Python语法基础.md
@@ -196,4 +196,126 @@ file()
 * char 或 byte，可以用长度为 1 的字符串来表示
 * 指针，python中没有必要使用指针，可以通过id()得到类似于地址的值，但是无法修改
 * int short long，Python中的整形实现相当于 c 语言中的长整型
-* float vs double，python的浮点类型是 c 语言中的双精度浮点类型
+* float vs double，python的浮点类型是 c 语言中的双精度浮点类型，对于精度要求比较高的，可以用 decimal 类型
+
+### 第五章 数字
+
+##### int(),round(),floor()区别
+
+* int: 直接去除小数部分
+* round : 四舍五入
+* floor : 找到不大于该数字的最小整数
+
+##### // 和 /
+
+* //：地板除
+* / : 2.7之后的版本全都是真除法，2.7之前的，对float类型是真除法，对整形是地板除
+
+##### ord() 和 chr()
+
+* ord(): 获取 ASCII 码值
+* chr(): 获取 ASCII 码值对应的符号
+> 做笔试题的时候可能会用到
+
+
+### 第六章 序列：字符串、列表和元组
+
+##### 连接操作符 +
+
+##### 重复操作 *
+
+##### 切片操作
+
+```python
+sequence[index]
+```
+* index <0：表示以序列的结束为起点  
+	```python
+	ns = [1,2,3]
+	print ns[-2]   # 输出 2
+	```
+* 返回一系列值
+	```python
+	sequence[starting_index : ending_index]
+	```
+	如果 starting_index = 0，starting_index 可以省略
+	```python
+	sequence[:ending_index]
+	```
+	同理如果 ending_index = len(sequence)-1,ending_index 也可以省略
+	```python
+	sequence[2:]
+	```
+	如果 ending_index < 0，终点就是 len(sequence) + ending_index
+	```python
+	ns = [1,2,3]
+	print ns[:-1] # 输出 1,2
+	```
+	返回整个序列
+	```python
+	sequence[:]
+	```
+* 使用步长
+	```python
+	sequence[starting_index : ending_index : step]
+	```
+	翻转操作
+	```python
+	sequence[::-1] # 省略开始结束索引，步长为 -1
+	```
+	开始和结束索引可以超过序列的长度，开始索引小于0按0算，结束索引超过最大索引按最大索引算
+
+##### 字符串类型不可变  
+	
+	修改字符串中的某个字符，不能通过索引的方式来修改，只能通过创建一个新串。
+	
+	删除字符串中的某个字符也是一样。
+
+##### 编译时字符串连接
+
+可以使用几个字符串连在一起来构建新字符串
+```python
+foo = "Hello" "World" # "HelloWorld"
+```
+通过这种方法，可以把长的字符串分成几部分来写，让添加注释更方便
+```python
+f = urllib.urlopen( 'http://' #protocol
+... 'locahost'				  #hostname
+... ':8000'					  #port
+... '/cgi-bin/friends2.py')    #file
+# 其实就是一个完整的url
+```
+
+##### python 中所有对象都具有一个字符串表示，通过 rpr()和 tr()得到
+
+print语句会自动为每个对象调用 str()
+
+##### 字符串模板
+
+python相比较于格式化更强的字符串模板
+
+```python
+from string import Template
+s = Template('There are ${howmany} ${lang} Quotaion Symbols')
+print s.substitute(lang = 'Python',howmany=3)
+# There are 3 Python Quotaion Symbols
+```
+
+##### 原始字符串 r
+
+忽视转义字符
+```python
+print r'\n' # 输出：\n
+```
+	
+##### zip()
+
+将两个字符串相应位置字符组合成一个
+```python
+s,t = 'foa','obr'
+zip(s,t)
+# [('f', 'o'), ('o', 'b'), ('a', 'r')]
+```
+
+##### ''' 应对特殊符号，比如 HTML 文本
+
