修改子标题

--- a/_posts/2018-03-15-dp-note.md
+++ b/_posts/2018-03-15-dp-note.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "dp-note"
-subtitle:   " \"dp\""
+subtitle:   " \"动态规划笔记\""
 date:       2018-03-15 11:11:11
 author:     "shihunyewu"
 header-img: "img/post-bg-miui6.jpg"
