leetcode 动态规划 309题

--- a/_posts/2018-03-15-dp-note.md
+++ b/_posts/2018-03-15-dp-note.md
@@ -119,6 +119,51 @@ class Solution(object):
         return ren
 ```
 
+#### 322. Coin Change
 
-#### 参考
+[题目地址](https://leetcode.com/problems/coin-change/description/)
+
+这道题目说的是，给定一些面值的硬币，并且能够无限供应。给定一个数额，求能够达到这个数额的最小的硬币数。该题目的递推关系:
+
+```python
+s[i] = min(1 + s[i - c[k]]) # 其中 1 是指从 s[i - c[k]] 状态到 s[i] 状态所添加的那一枚硬币，c[k] 是指第 k 枚硬币的面值
+```
+
+现在本人水平有限，递推关系还是不能一眼看出，我总是先从最后的结果往后逆推，画出逆推分支树，根据分支树判断有重复计算的数据，并且考虑如果重复计算得到的数据不同，那就需要考虑这些数据的选取规则，比如本题的选取规则就是 min(c[k] + s[i - c[k])，虽然有很多枚硬币可选，但是我们希望得到的是最小的硬币数。（这种思考方式，再次感谢本文最后的参考资料）
+
+另外，做动态规划类问题，首先就要有开辟多余空间的心理准备。优先解决问题，解决了问题之后，再考虑去除无效空间，只保存每次对递推有用的空间。
+
+下面的代码还有空间优化的余地，但是为了可读性，所以先不做优化。
+
+代码：
+```python
+class Solution(object):
+    def coinChange(self, coins, amount):
+        """
+        :type coins: List[int]
+        :type amount: int
+        :rtype: int
+        """
+        # 创建一个长度为 amount的数组
+        if amount == 0:
+            return 0
+        if amount in coins:
+            return 1
+        
+        flag = [-1] * ( amount + 1 )
+        for c in coins:
+            if c < amount:
+                flag[c] = 1
+        for i in xrange( 1 , amount):
+            if flag[i] != -1:
+                for c in coins:
+                    if c + i <= amount:
+                        if flag[c + i] == -1:
+                            flag[c + i] = flag[i] + 1
+                        elif flag[c + i] > flag[i] + 1:
+                            flag[c + i] = flag[i] + 1
+        return flag[amount]
+```
+
+#### 参考资料
 1. [动态规划](https://www.bilibili.com/video/av18512769/)
