--- a/_posts/2018-06-11-N-sum.md
+++ b/_posts/2018-06-11-N-sum.md
@@ -7,7 +7,7 @@ author:     "shihunyewu"
 header-img: "img/post-bg-unix-linux.jpg"
 catalog: false
 tags:
-    - LeetCode
+    - LEETCODE
 ---
 
 > 数组中 n 个数的和为 0 问题
