--- a/_posts/2018-06-11-N-sum.md
+++ b/_posts/2018-06-11-N-sum.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "N-SUM"
-subtitle:   " \"nSum\""
+subtitle:   " \"N, Sum\""
 date:       2018-06-11 11:11:11
 author:     "shihunyewu"
 header-img: "img/post-bg-unix-linux.jpg"
