--- a/_posts/2018-03-15-dp-note.md
+++ b/_posts/2018-03-15-dp-note.md
@@ -12,6 +12,15 @@ tags:
 
 > "动态规划总结"
 
+### 何为动态规划
+[动态规划 wiki](https://zh.wikipedia.org/wiki/%E5%8A%A8%E6%80%81%E8%A7%84%E5%88%92)，首先明确适合用动态规划来解决问题的情况：
+* 问题存在最优子结构，问题最优解中子问题的解也是子问题的最优解。
+* 子问题最优解无后效性，子问题的最优解不会随着求解问题规模的扩大而改变。
+* 子问题存在重叠，由问题分解出的很多子问题中，存在一部分相同的子问题，这意味着我们可以存储好这一部分子问题的结果，避免重复计算。
+
+在分析问题时可以先用该三点来检验问题是否可用动态规划求解。
+
+### 动态规划例题
 刷LEETCODE的时候经常会碰到动态规划的题目，动态规划最重要一点是找到其内含的递推关系，有的时候需要记录多个状态的值，有的时候只需要记录仅有的几个状态的值，这些都视递推关系而定。
 
 #### 热身
@@ -78,7 +87,6 @@ class Solution(object):
             return nums[0]
         if len(nums) == 2:
             return max(nums)
-        
         prepre = nums[0]
         pre = max(nums[0:2])
         i = 2
@@ -94,11 +102,11 @@ class Solution(object):
 [题目地址](https://leetcode.com/problems/climbing-stairs/description/)
 
 该题目的递推关系：
-```
+```java
 s[n] = s[n-1] + s[n-2]
 ```
 代码：
-```python 
+```python
 class Solution(object):
     def climbStairs(self, n):
         """
@@ -149,7 +157,6 @@ class Solution(object):
             return 0
         if amount in coins:
             return 1
-        
         flag = [-1] * ( amount + 1 )
         for c in coins:
             if c < amount:
@@ -163,6 +170,38 @@ class Solution(object):
                         elif flag[c + i] > flag[i] + 1:
                             flag[c + i] = flag[i] + 1
         return flag[amount]
+```
+
+#### 53. Maximum Subarray
+[题目地址](https://leetcode.com/problems/maximum-subarray/description/)
+这道题目的特别之处在于其最终结果并非存在于递推公式中, 该题目的递推公式为
+```java
+# i = 0 或 f(i-1) <= 0
+f(i) = nums[i]
+# f(i-1) > 0 且 i != 0
+f(i) = f(i-1) + nums[i]
+```
+在分析该问题时，硬要将求解结果表示在递推公式中，结果总是找不到合适的递推公式，了解了该递推公式后，发现在此处需要扩展思路，递推公式中不一定包含最终的求解结果。像本题中，``f(i)`` 表示的是某一段子数组的和，而问题求解的最终结果却是 max(f(i))。
+
+
+具体代码如下
+```java
+class Solution {
+    public int maxSubArray(int[] nums) {
+        int curSum = 0;
+        int maxSum = Integer.MIN_VALUE;
+        for(int i = 0;i< nums.length;i++){
+            if(curSum < 0)
+                curSum = nums[i];
+            else{
+                curSum += nums[i];
+            }
+            if(curSum > maxSum)
+                    maxSum = curSum;
+        }
+        return maxSum;
+    }
+}
 ```
 
 #### 参考资料
