海量数据处理

--- a/_posts/2019-04-09-big-data.md
+++ b/_posts/2019-04-09-big-data.md
@@ -32,7 +32,7 @@ BitMap 实际上就是用第 n 个 bit 位是否为 1 表示是否存在数字 n
 - 查找是否存在 value，用 k 个 Hash 函数计算出 k（也可能小于 k） 个位置，查看这些位置是否全部都为 1，如果是，那么大概率说明存在 value。如果不全是 1，那么肯定不存在。
 
 #### 本质
-牺牲了准确性，提高了速度和效率。因此即使 hash 出来的 k 个位置都为 1，也不能证明该值一定是存在的。
+牺牲了准确性，提高了速度和效率。因为即使 hash 出来的 k 个位置都为 1，也不能证明该值一定是存在的。
 
 ### 倒序索引
 每次检索的时候，搜索引擎并非遍历每一个保存下来的网页中是否存在关键词。
