--- a/_posts/2018-11-17-JVM-Learn.md
+++ b/_posts/2018-11-17-JVM-Learn.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
 title:      "JVM-learn"
-subtitle:   " \"深入理解 JVM 虚拟机\""
+subtitle:   "深入理解 JVM 虚拟机"
 date:       2018-11-17 11:11:11
 author:     "shihunyewu"
 header-img: "img/post-bg-unix-linux.jpg"
