--- a/_posts/2021-02-21-work-life.md
+++ b/_posts/2021-02-21-work-life.md
@@ -13,4 +13,4 @@ tags:
 
 > 成年人的生活里没有容易二字
 
-学校已经是非常遥远的记忆了，偶尔翻起很久之前写的博客也会有些涟漪。
+学校已经是非常遥远的记忆了，偶尔翻起很久之前写的博客也会有些涟漪。那时候自己很迷茫，面对知识的海洋，不知道那些东西是有价值的，会对自己以后工作有帮助的。在浩瀚的知识海洋面前，没有节制的好奇心会导致精力无端被耗尽。
